# cppgres

./: .gitignore  CMakeLists.txt  CNAME  Dockerfile  Doxyfile  LICENSE  README.md  aggregate_8hpp_source.html  annotated.html  annotated_dup.js  backend_8hpp_source.html  bgw_8hpp.html  bgw_8hpp.js  bgw_8hpp_source.html  classboost_1_1pfr_1_1detail_1_1offset__based__getter-members.html  classboost_1_1pfr_1_1detail_1_1offset__based__getter.html  classcppgres_1_1null__datum__exception-members.html  classcppgres_1_1null__datum__exception.html  classcppgres_1_1pg__exception-members.html  classcppgres_1_1pg__exception.html  classcppgres_1_1pg__exception.js  classes.html  collation_8hpp_source.html  conceptcppgres_1_1a__memory__context.html  conceptcppgres_1_1a__vector.html  conceptcppgres_1_1aggregate.html  conceptcppgres_1_1combinable__aggregate.html  conceptcppgres_1_1composite__type.html  conceptcppgres_1_1convertible__from__datum.html  conceptcppgres_1_1convertible__from__nullable__datum.html  conceptcppgres_1_1convertible__into__datum.html  conceptcppgres_1_1convertible__into__nullable__datum.html  conceptcppgres_1_1convertible__into__nullable__datum__and__has__a__type.html  conceptcppgres_1_1convertible__into__nullable__datum__or__set__iterator.html  conceptcppgres_1_1convertible__into__nullable__datum__or__set__iterator__or__void.html  conceptcppgres_1_1covered__node.html  conceptcppgres_1_1covering__node.html  conceptcppgres_1_1datumable__function.html  conceptcppgres_1_1datumable__iterator.html  conceptcppgres_1_1datumable__tuple.html  (+604 more)
.github/workflows/: amalgamate.yaml  build.yml  docs.yml
cmake/: FindPostgres.cmake
cppgres/: datum.h  error.h  exception.h  exception_impl.h  executor.h  function.h  guard.h  imports.h  memory.h  set.h  type.h  types.h  xact.h
cppgres/utils/: function_traits.h  utils.h
demo/: Makefile  cppgres_demo--1.control  cppgres_demo--1.sql  cppgres_demo.control  cppgres_demo.cpp
doc/: header.html
scripts/: abi_layout.py  check_abi.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  defines_0.js  enums_0.js  (+23 more)
src/: cppgres.h  cppgres.hpp
src/cppgres/: aggregate.hpp  backend.hpp  bgw.hpp  collation.hpp  datum.h  datum.hpp  error.h  error.hpp  exception.hpp  exception_impl.h  exception_impl.hpp  executor.h  executor.hpp  function.h  function.hpp  guard.h  guard.hpp  guc.hpp  heap_tuple.hpp  imports.h  list.hpp  memory.h  memory.hpp  name.hpp  node.hpp  node_dispatch_table.hpp  node_mapping_table.hpp  record.hpp  resource_owner.hpp  role.hpp  set.h  set.hpp  syscache.h  syscache.hpp  threading.hpp  type.h  type.hpp  types.h  types.hpp  value.hpp  (+2 more)
src/cppgres/utils/: cstring.hpp  function_traits.hpp  maybe_ref.hpp  pfr.hpp  utils.h  utils.hpp
tests/: aggregate.hpp  backend.hpp  bgw.hpp  datum.h  datum.hpp  dummy.cpp  errors.h  errors.hpp  function.h  function.hpp  guard.hpp  heap_tuple.hpp  memory_context.h  memory_context.hpp  node.hpp  record.hpp  role.hpp  spi.h  spi.hpp  srf.h  srf.hpp  syscache.hpp  tests.cpp  tests.h  tests.hpp  threading.hpp  type.h  type.hpp  typeconv.hpp  xact.h  xact.hpp
